--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.05 Mon Aug  3 16:55:20 2009
+	- fix the algorithm for searching headers and libs
+
 0.04 Wed Jul 29 11:41:55 2009
 	- fix cc_append_to_ccflags() on non-Win32 system
 	- code refactering
