--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
-0.06
-
+0.06 Tue Aug  4 09:20:08 2009
+	- fix tests for Win32 (RT #48321 reported by Taro Nishino)
+	- add cc_define() command
 
 0.05 Mon Aug  3 16:55:20 2009
 	- fix the algorithm for searching headers and libs
