--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.09 Thu Aug 13 22:27:20 2009
+	- fix a linking library issue on Cygwin
+
 0.08 Wed Aug 12 11:36:27 2009
 	- fix checklib algorithm
 	- enhance tests
