--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
 Revision history for Perl extension Module::Install::XSUtil
 
-0.10
+0.10 Tue Aug 18 13:05:46 2009
 	- add '-g' command line option (perl Makefile.PL -g)
 		- avoid optimization (remove -Ox from OPTIMIZE)
 		- add -DDEBUGGING to DEFINE
-	- make the function finding algorithm more smart (fix RT #)
+	- make the function finding algorithm more smart (fix RT #48738 in XS::MagicExt)
 
 0.09 Thu Aug 13 22:27:20 2009
 	- fix a linking library issue on Cygwin
