--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.12 Fri Aug 21 12:54:20 2009
+	- re-fix the algorithm to find functions again (RT #48797)
+	- refer to Module::Install::AuthorRequires
+
 0.11 Wed Aug 19 16:15:33 2009
 	- re-fix the algorithm to find functions (RT #48797)
 	- remove -DDEBUGGING in '-g' option
