--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.16 Mon Nov  2 11:55:46 2009
+	- Fix a typo in cc_warnings()
+
 0.15 Thu Oct 29 09:31:07 2009
 	- Requires newer versions in prerequisites
 	- Switch the use of -Wextra/-W by gcc versions
