--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.18 Tue Nov 17 10:15:03 2009
+    - Optimize cc_available() by caching its value
+
 0.17 Thu Nov 12 13:30:47 2009
     - Fix cc_warnings() for old gcc
     - Add cc_available() using ExtUtils::CBuuilder
