--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.22 Thu Mar 11 19:02:18 2010
+    - Add Devel::PPPort to build_requires if needed
+
 0.21 Sun Jan 10 15:22:20 2010
     - Enable -Wc++-compat on gcc >= 4.1
 
