Checking in changes prior to tagging of version 0.30.
Changelog diff is:

diff --git a/Changes b/Changes
index 4ef9735..0ac5d40 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil

+0.30 Sat Sep 11 14:17:06 2010
+    - Add use_xshelper() command to create xshelper.h
+
 0.27 Sun Sep  5 11:47:03 2010
     - c99_available() should not have any side effects (reported by makamaka)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.30 Sat Sep 11 14:17:06 2010
+    - Add use_xshelper() command to create xshelper.h
+
 0.27 Sun Sep  5 11:47:03 2010
     - c99_available() should not have any side effects (reported by makamaka)
 
