Checking in changes prior to tagging of version 0.31.
Changelog diff is:

diff --git a/Changes b/Changes
index 0ac5d40..682e6c1 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil

+0.31 Mon Sep 13 13:09:16 2010
+    - Fix a check for STATIC_INLINE (s/__cplusplus__/__cplusplus/)
+
 0.30 Sat Sep 11 14:17:06 2010
     - Add use_xshelper() command to create xshelper.h

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.31 Mon Sep 13 13:09:16 2010
+    - Fix a check for STATIC_INLINE (s/__cplusplus__/__cplusplus/)
+
 0.30 Sat Sep 11 14:17:06 2010
     - Add use_xshelper() command to create xshelper.h
 
