--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.35 Wed Sep 29 23:46:17 2010
+    - Checks C99 specification more strictly
+    - Add some macros to xshelper.h
+
 0.34 Sun Sep 26 12:18:18 2010
     - Oops! The change in 0.33 did not work.
 
