--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Install::XSUtil
 
+0.36 Thu Oct  7 16:49:04 2010
+    - Resolve RT #61660 (SREZIC): Support for ccache missing
+    - Resolve RT #61770 (bokutin): A typo in SYNOPSIS
+
 0.35 Wed Sep 29 23:46:17 2010
     - Checks C99 specification more strictly
     - Add some macros to xshelper.h
